# sweepd

./: .gitignore  LICENSE  README.md  example_script.py  pyproject.toml  sweep.py  sweep_cli.py  sweep_web.py
config/: config.yaml  sweep_defaults.toml
config/dataset/: default.yaml
config/training/: default.yaml
sweep/: __init__.py  cli.py  core.py  gpu.py  web_app.py
sweep/web/: index.html
tests/: conftest.py  test_cli.py  test_core.py  test_gpu.py  test_sweep_cli.py  test_sweep_manager.py  test_sweep_web.py  test_web.py
web/: index.html
