[project]
name = "sweepd"
version = "0.1.0"
description = "File-based distributed hyperparameter sweep manager for ML experiments using atomic file locking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.129.0",
    "hydra-core>=1.3.2",
    "tomli-w>=1.2.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
sweepd = "sweep.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sweep"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
